// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it renders an activity indicator when submitting 1`] = `
style = Object {}

<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "marginTop": 20,
      },
      Object {},
      Object {},
    ]
  }
>
  <View
    collapsable={undefined}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#EA3154",
        "borderRadius": 15,
        "height": 30,
        "justifyContent": "center",
        "width": 100,
      }
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    />
  </View>
</View>
`;

exports[`it renders correctly by default 1`] = `
style = Object {}

<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "marginTop": 20,
      },
      Object {},
      Object {},
    ]
  }
>
  <View
    collapsable={undefined}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#EA3154",
        "borderRadius": 15,
        "height": 30,
        "justifyContent": "center",
        "width": 100,
      }
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "color": "#fff",
              "fontSize": 12,
              "fontWeight": "700",
            },
            Object {},
          ]
        }
      >
        SAVE
      </Text>
    </View>
  </View>
</View>
`;

exports[`it renders correctly with a custom text 1`] = `
style = Object {}

<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "marginTop": 20,
      },
      Object {},
      Object {},
    ]
  }
>
  <View
    collapsable={undefined}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#EA3154",
        "borderRadius": 15,
        "height": 30,
        "justifyContent": "center",
        "width": 100,
      }
    }
  >
    <View
      accessibilityComponentType={undefined}
      accessibilityLabel={undefined}
      accessibilityTraits={undefined}
      accessible={true}
      collapsable={undefined}
      hitSlop={undefined}
      isTVSelectable={true}
      nativeID={undefined}
      onLayout={undefined}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "opacity": 1,
        }
      }
      testID={undefined}
      tvParallaxProperties={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "color": "#fff",
              "fontSize": 12,
              "fontWeight": "700",
            },
            Object {},
          ]
        }
      >
        LOGIN
      </Text>
    </View>
  </View>
</View>
`;
